cluster/apps/atuin/templates/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "atuin-policy"
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: atuin
  policyTypes:
    - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 80
    - from:
      - ipBlock:
          cidr: 192.168.3.0/24
      ports:
      - protocol: TCP
        port: 80
    - from:
      - podSelector:
          matchLabels:
            "gateway.networking.k8s.io/gateway-name": "envoy-aisling-dev-external"
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network
      ports:
      - protocol: TCP
        port: 8080
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: vmagent
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
      ports:
      - protocol: TCP
        port: 8080
